--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <div class="flex flex-col items-center">
             <img src="assets/448786469_779044004218478_7681026214239985584_n.jpg" alt="Foto Irvan Afandi" class="w-40 h-40 sm:w-48 sm:h-48 rounded-full border-4 border-[var(--gold)] shadow-xl object-cover fade-in" />
             <div class="mt-4 flex items-center gap-3 text-2xl">
-              <a href="https://www.instagram.com/" class="hover:text-pink-400 transition"><i class="ph ph-instagram-logo"></i></a>
+              <a href="https://www.instagram.com/irvnafndi/" class="hover:text-pink-400 transition"><i class="ph ph-instagram-logo"></i></a>
               <a href="https://wa.me/6282245115665" class="hover:text-green-400 transition"><i class="ph ph-whatsapp-logo"></i></a>
               <a href="https://secure.facebook.com/facebook_pay/?referrer=accounts_center" class="hover:text-blue-400 transition"><i class="ph ph-facebook-logo"></i></a>
               <a href="https://www.tiktok.com/id-ID/" class="hover:text-red-400 transition"><i class="ph ph-tiktok-logo"></i></a>
