--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
             <div class="mt-4 flex items-center gap-3 text-2xl">
               <a href="https://www.instagram.com/irvnafndi/" class="hover:text-pink-400 transition"><i class="ph ph-instagram-logo"></i></a>
               <a href="https://wa.me/6282245115665" class="hover:text-green-400 transition"><i class="ph ph-whatsapp-logo"></i></a>
-              <a href="https://secure.facebook.com/facebook_pay/?referrer=accounts_center" class="hover:text-blue-400 transition"><i class="ph ph-facebook-logo"></i></a>
-              <a href="https://www.tiktok.com/id-ID/" class="hover:text-red-400 transition"><i class="ph ph-tiktok-logo"></i></a>
+              <a href="https://www.facebook.com/profile.php?id=100091805554524&locale=id_ID" class="hover:text-blue-400 transition"><i class="ph ph-facebook-logo"></i></a>
+              <a href="https://www.tiktok.com/@afaniyah_" class="hover:text-red-400 transition"><i class="ph ph-tiktok-logo"></i></a>
               <a href="mailto:panjolpg1922@gmail.com" class="hover:text-yellow-300 transition"><i class="ph ph-envelope"></i></a>
             </div>
           </div>
