--- a/index.html
+++ b/index.html
@@ -136,42 +136,32 @@
       </div>
     </section>
 
-   <!-- MODAL E-BOOK SKI -->
-<div id="modal1" class="modal">
-  <div class="modal-content max-w-xl overflow-y-auto max-h-[80vh] p-6">
-    <span onclick="closeModal('modal1')" class="modal-close">&times;</span>
-    <h2 class="text-2xl font-bold mb-4 text-yellow-400">📖 E-Book SKI</h2>
+  <div class="space-y-6">
+  <!-- Artikel -->
+  <div>
+    <h3 class="text-xl font-semibold text-[var(--gold)] mb-2">Artikel</h3>
+    <ul class="list-disc list-inside space-y-1 text-white">
+      <li><a href="pdf/artikel/ArtikelKhalid.pdf" target="_blank" class="hover:underline">Khalid bin Walid</a></li>
+      <li><a href="pdf/artikel/ArtikelUmar.pdf" target="_blank" class="hover:underline">Umar bin Khattab</a></li>
+    </ul>
+  </div>
 
-    <!-- Tabs -->
-    <div class="flex gap-4 mb-4">
-      <button onclick="showTab('artikel')" id="btn-artikel" class="tab-btn px-3 py-1 rounded bg-[var(--gold)] text-black font-semibold transition">Artikel</button>
-      <button onclick="showTab('kisah')" id="btn-kisah" class="tab-btn px-3 py-1 rounded bg-white/10 text-zinc-100 font-semibold transition">Kisah</button>
-    </div>
+  <!-- Kisah -->
+  <div>
+    <h3 class="text-xl font-semibold text-[var(--gold)] mb-2">Kisah</h3>
+    <ul class="list-disc list-inside space-y-1 text-white">
+      <li><a href="pdf/kisah/KisahYamamah.pdf" target="_blank" class="hover:underline">Perang Yamamah</a></li>
+      <li><a href="pdf/kisah/KisahBadar.pdf" target="_blank" class="hover:underline">Perang Badar</a></li>
+    </ul>
+  </div>
 
-    <!-- Konten Artikel -->
-    <div id="tab-artikel" class="tab-content animate-fade-in">
-      <ul class="space-y-3 text-gray-200">
-        <li>📖 <strong>Kisah Khalid bin Walid:</strong> Strategi dan keberanian panglima Islam.</li>
-        <li>⚔️ <strong>Perang Yamamah:</strong> Pelajaran kepemimpinan & iman para sahabat.</li>
-        <li>🕌 <strong>Refleksi Umar bin Khattab:</strong> Hikmah dalam memimpin dan beradab.</li>
-      </ul>
-    </div>
-
-    <!-- Konten Kisah -->
-    <div id="tab-kisah" class="tab-content hidden animate-fade-in">
-      <ul class="space-y-3 text-gray-200">
-        <li>🌟 <strong>Kisah Santri:</strong> Belajar kesabaran dari pengalaman sehari-hari.</li>
-        <li>🏹 <strong>Perjuangan Thariq bin Ziyad:</strong> Inspirasi keberanian menaklukkan tantangan.</li>
-        <li>📝 <strong>Kisah Zaid bin Tsabit:</strong> Ketekunan dalam menuntut ilmu dan menulis wahyu.</li>
-      </ul>
-    </div>
-
-    <!-- Tombol Unduh -->
-    <div class="mt-6 text-center">
-      <a href="/assets/ebook-ski.pdf" download class="inline-block px-5 py-3 bg-[var(--gold)] text-black rounded-xl font-semibold hover:brightness-110 transition">
-        Unduh PDF
-      </a>
-    </div>
+  <!-- Refleksi -->
+  <div>
+    <h3 class="text-xl font-semibold text-[var(--gold)] mb-2">Refleksi</h3>
+    <ul class="list-disc list-inside space-y-1 text-white">
+      <li><a href="pdf/refleksi/RefleksiPondok.pdf" target="_blank" class="hover:underline">Refleksi Pondok</a></li>
+      <li><a href="pdf/refleksi/RefleksiSantri.pdf" target="_blank" class="hover:underline">Refleksi Santri</a></li>
+    </ul>
   </div>
 </div>
 
