--- a/index.html
+++ b/index.html
@@ -112,88 +112,59 @@
     <p class="text-sm">Menghidupkan semangat para panglima: keberanian, ilmu, dan iman</p>
   </header>
 
-  <!-- Menu Project -->
-  <section class="max-w-4xl mx-auto p-6">
-    <h2 class="text-2xl font-bold mb-4">Project</h2>
-    <div class="grid md:grid-cols-2 gap-6">
+  <section id="projects" class="py-12 bg-gray-50">
+  <div class="max-w-6xl mx-auto px-6">
+    <h2 class="text-3xl font-bold text-center mb-12">⚔️ Projek</h2>
+    
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
 
       <!-- E-Book SKI -->
-      <div class="bg-white p-6 rounded-2xl shadow hover:shadow-lg transition">
+      <div class="bg-white rounded-2xl shadow-md p-6 hover:shadow-xl transition">
         <h3 class="text-xl font-semibold mb-2">📖 E-Book SKI</h3>
-        <p class="text-gray-600 mb-2">Kumpulan artikel, refleksi, kisah tokoh & perang Islam untuk santri zaman sekarang.</p>
-        <p class="text-sm text-yellow-600 mb-4">Status: <span class="font-bold">Proses</span></p>
-        <a href="#ebook" class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700">Lihat Isi</a>
+        <p class="text-gray-600 mb-4">Wadah utama berisi tiga bagian: artikel, kisah, dan refleksi.</p>
+        <ul class="list-disc list-inside text-gray-700 mb-4">
+          <li><b>Artikel</b> → <a href="artikelkuski.pdf" target="_blank" class="text-blue-600 hover:underline">artikelkuski.pdf</a></li>
+          <li><b>Kisah</b> → <i>Khalid bin Walid: Pedang Allah yang Terhunus</i></li>
+          <li><b>Refleksi</b> → <i>Catatan Perjuangan di NJ Bali</i></li>
+        </ul>
+        <span class="px-3 py-1 text-sm rounded-full bg-yellow-100 text-yellow-700">Proses</span>
       </div>
 
       <!-- Mini Drama -->
-      <div class="bg-white p-6 rounded-2xl shadow hover:shadow-lg transition">
+      <div class="bg-white rounded-2xl shadow-md p-6 hover:shadow-xl transition">
         <h3 class="text-xl font-semibold mb-2">🎭 Mini Drama</h3>
-        <p class="text-gray-600 mb-2">Drama pendek yang menghidupkan kisah para panglima.</p>
-        <p class="text-sm text-green-600">Status: <span class="font-bold">Ada</span></p>
+        <p class="text-gray-600 mb-4">Drama pendek karya santri NJ Bali. Saat ini: <i>Drama Perang Yamamah</i>.</p>
+        <span class="px-3 py-1 text-sm rounded-full bg-green-100 text-green-700">Ada</span>
       </div>
 
       <!-- Karya Santri -->
-      <div class="bg-white p-6 rounded-2xl shadow hover:shadow-lg transition">
+      <div class="bg-white rounded-2xl shadow-md p-6 hover:shadow-xl transition">
         <h3 class="text-xl font-semibold mb-2">✍️ Karya Santri</h3>
-        <p class="text-gray-600 mb-2">Puisi, tulisan, atau gambar hasil kolaborasi adik-adik santri.</p>
-        <p class="text-sm text-orange-600">Status: <span class="font-bold">Rencana</span></p>
+        <p class="text-gray-600 mb-4">Puisi, tulisan, dan karya kreatif santri.</p>
+        <blockquote class="italic text-gray-700 border-l-4 border-gray-300 pl-4 mb-4">
+          "Menuntut ilmu sepanjang hayat,<br>
+          Di pondok hati ditempa kuat,<br>
+          Sabar jadi cahaya penuntun,<br>
+          Santri berjuang demi ridha Tuhan."
+        </blockquote>
+        <span class="px-3 py-1 text-sm rounded-full bg-blue-100 text-blue-700">Rencana</span>
       </div>
 
       <!-- Publikasi -->
-      <div class="bg-white p-6 rounded-2xl shadow hover:shadow-lg transition">
+      <div class="bg-white rounded-2xl shadow-md p-6 hover:shadow-xl transition">
         <h3 class="text-xl font-semibold mb-2">📢 Publikasi</h3>
-        <p class="text-gray-600 mb-2">Menyebarkan karya di IG, TikTok, YouTube & forum diskusi santri NJ Bali.</p>
-        <p class="text-sm text-gray-600">Status: <span class="font-bold">Coming Soon</span></p>
-      </div>
-    </div>
-  </section>
-
-  <!-- Halaman E-Book -->
-  <section id="ebook" class="bg-gray-50 py-10">
-    <div class="max-w-4xl mx-auto px-6">
-      <h2 class="text-3xl font-bold text-center mb-8">📖 E-Book SKI</h2>
-
-      <!-- Tabs -->
-      <div class="flex justify-center space-x-4 mb-6">
-        <a href="#artikel" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700">Artikel</a>
-        <a href="#kisah" class="px-4 py-2 bg-green-600 text-white rounded-lg hover:bg-green-700">Kisah</a>
-        <a href="#refleksi" class="px-4 py-2 bg-purple-600 text-white rounded-lg hover:bg-purple-700">Refleksi</a>
-      </div>
-
-      <!-- Artikel -->
-      <div id="artikel" class="mb-10">
-        <h3 class="text-2xl font-semibold mb-4">📑 Artikel</h3>
-        <ul class="list-disc pl-6 space-y-2">
-          <li>
-            <a href="pdf/ArtikelSki.pdf" target="_blank" class="text-blue-700 hover:underline">
-              Artikel SKI: Pentingnya Sejarah Islam
-            </a>
-          </li>
+        <p class="text-gray-600 mb-4">Menyebarkan karya melalui media digital.</p>
+        <ul class="list-disc list-inside text-gray-700">
+          <li>Instagram: <a href="https://instagram.com/akunmu" target="_blank" class="text-blue-600 hover:underline">@akunmu</a></li>
+          <li>TikTok: <a href="https://tiktok.com/@akunmu" target="_blank" class="text-blue-600 hover:underline">@akunmu</a></li>
+          <li>YouTube & Forum NJ Bali</li>
         </ul>
+        <span class="px-3 py-1 text-sm rounded-full bg-purple-100 text-purple-700">Coming Soon</span>
       </div>
 
-      <!-- Kisah -->
-      <div id="kisah" class="mb-10">
-        <h3 class="text-2xl font-semibold mb-4">📜 Kisah</h3>
-        <p class="text-gray-600">Belum ada kisah yang dimasukkan. (Nanti bisa ditambah Perang Yamamah, Perang Badar, dll.)</p>
-      </div>
-
-      <!-- Refleksi -->
-      <div id="refleksi" class="mb-10">
-        <h3 class="text-2xl font-semibold mb-4">🌿 Refleksi</h3>
-        <p class="text-gray-600">Belum ada refleksi yang dimasukkan. (Contoh: Refleksi Pondok, Refleksi Santri.)</p>
-      </div>
     </div>
-  </section>
-
-  <!-- Footer -->
-  <footer class="bg-blue-900 text-white text-center p-4 mt-10">
-    <p class="text-sm">© 2025 Panglima Islam | Dibuat dengan semangat ✊</p>
-  </footer>
-
-</body>
-</html>
-
+  </div>
+</section>
 
 <style>
   /* Animasi fade-in tab */
